// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The GuCname construct should create the correct resources with minimal config 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [
      "GuStack",
    ],
    "gu:cdk:version": "1.0.0",
  },
  "Resources": Object {
    "TestRecord": Object {
      "Properties": Object {
        "Name": "xyz.code-guardian.com",
        "RecordType": "CNAME",
        "ResourceRecords": Array [
          "apple.example.com",
        ],
        "Stage": "TEST",
        "TTL": 3600,
      },
      "Type": "Guardian::DNS::RecordSet",
    },
  },
}
`;

exports[`The GuDnsRecordSet construct should create the correct resources with minimal config 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [
      "GuStack",
    ],
    "gu:cdk:version": "1.0.0",
  },
  "Resources": Object {
    "TestRecord": Object {
      "Properties": Object {
        "Name": "banana.example.com",
        "RecordType": "CNAME",
        "ResourceRecords": Array [
          "apple.example.com",
        ],
        "Stage": "TEST",
        "TTL": 3600,
      },
      "Type": "Guardian::DNS::RecordSet",
    },
  },
}
`;
